// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PartTypeModal displays correctly with a new part 1`] = `
<div>
  <div
    style={
      Object {
        "textAlign": "right",
        "width": "100%",
      }
    }
  >
    <Icon
      as="i"
      circular={true}
      link={true}
      name="remove"
    />
  </div>
  <div
    style={
      Object {
        "textAlign": "left",
        "width": "100%",
      }
    }
  >
    <h2>
      New
       Part Type
    </h2>
    <div>
      <SelectInput
        className=""
        error=""
        fieldName="includeInSection"
        isEmptyAllowed={true}
        label="Section"
        multipleSize={1}
        onChange={[Function]}
        options={
          Array [
            Object {
              "name": "section 1",
              "value": "1",
            },
            Object {
              "name": "section 2",
              "value": "2",
            },
          ]
        }
        title="Select Section"
      />
    </div>
    <PartTypeData
      handlePartTypeValueChange={[Function]}
      partType={Object {}}
    />
  </div>
  <div
    style={
      Object {
        "textAlign": "right",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`PartTypeModal displays correctly with a partial new part 1`] = `
<div>
  <div
    style={
      Object {
        "textAlign": "right",
        "width": "100%",
      }
    }
  >
    <Icon
      as="i"
      circular={true}
      link={true}
      name="remove"
    />
  </div>
  <div
    style={
      Object {
        "textAlign": "left",
        "width": "100%",
      }
    }
  >
    <h2>
      New
       Part Type
    </h2>
    <div>
      <SelectInput
        className=""
        error=""
        fieldName="includeInSection"
        isEmptyAllowed={true}
        label="Section"
        multipleSize={1}
        onChange={[Function]}
        options={
          Array [
            Object {
              "name": "section 1",
              "value": "1",
            },
            Object {
              "name": "section 2",
              "value": "2",
            },
          ]
        }
        title="Select Section"
      />
    </div>
    <PartTypeData
      handlePartTypeValueChange={[Function]}
      partType={
        Object {
          "_detail": true,
          "name": "new one",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "textAlign": "right",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`PartTypeModal error when no includeInSection 1`] = `
<div>
  <div
    style={
      Object {
        "textAlign": "right",
        "width": "100%",
      }
    }
  >
    <Icon
      as="i"
      circular={true}
      link={true}
      name="remove"
    />
  </div>
  <div
    style={
      Object {
        "textAlign": "left",
        "width": "100%",
      }
    }
  >
    <h2>
      Edit
       Part Type
    </h2>
    <div>
      <SelectInput
        className=""
        error=""
        fieldName="includeInSection"
        isEmptyAllowed={true}
        label="Section"
        multipleSize={1}
        onChange={[Function]}
        options={
          Array [
            Object {
              "name": "section 1",
              "value": "1",
            },
            Object {
              "name": "section 2",
              "value": "2",
            },
          ]
        }
        title="Select Section"
        value="1"
      />
    </div>
    <PartTypeData
      handlePartTypeValueChange={[Function]}
      partType={
        Object {
          "_detail": true,
          "id": "1",
          "includeInSection": 1,
          "name": "has one one",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "textAlign": "right",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`PartTypeModal error when no short name 1`] = `
<div>
  <div
    style={
      Object {
        "textAlign": "right",
        "width": "100%",
      }
    }
  >
    <Icon
      as="i"
      circular={true}
      link={true}
      name="remove"
    />
  </div>
  <div
    style={
      Object {
        "textAlign": "left",
        "width": "100%",
      }
    }
  >
    <h2>
      Edit
       Part Type
    </h2>
    <div>
      <SelectInput
        className=""
        error=""
        fieldName="includeInSection"
        isEmptyAllowed={true}
        label="Section"
        multipleSize={1}
        onChange={[Function]}
        options={
          Array [
            Object {
              "name": "section 1",
              "value": "1",
            },
            Object {
              "name": "section 2",
              "value": "2",
            },
          ]
        }
        title="Select Section"
        value="1"
      />
    </div>
    <PartTypeData
      handlePartTypeValueChange={[Function]}
      partType={
        Object {
          "_detail": true,
          "id": "1",
          "includeInSection": 1,
          "name": "has one one",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "textAlign": "right",
        "width": "100%",
      }
    }
  />
</div>
`;
